Test framework WIP I guess? Working for 2 tests atm.